# mob_ble

./: .gitignore  CHANGELOG.md  LICENSE  Makefile  README.md  mix.exs
docs/: PERFORMANCE.md  ROADMAP.md
examples/basic_host/: README.md  mix.exs
examples/basic_host/lib/basic_host/: application.ex  transport.ex
lib/: mob_ble.ex
lib/mob/: ble.ex
lib/mob/ble/: backoff.ex  bridge.ex  carrier_rejected_error.ex  diagnostics.ex  error.ex  mobile_bridge.ex  self_test.ex
lib/mob/ble/diagnostics/: metrics.ex
lib/mob/ble/internal/: bridge_protocol.ex  carrier_decision.ex
lib/mob_ble/: application.ex
priv/: mob_plugin.exs
priv/native/: mob_ble_nif_stub.c
priv/native/android/: EXTRACTION_INVENTORY.md  build.gradle  consumer-rules.pro  settings.gradle
priv/native/android/jni/: CMakeLists.txt  build.zig  driver_tab_decls.cinc  driver_tab_entries.cinc  mob_ble_jni_hooks.c  mob_ble_nif.c  static_nifs.list
priv/native/ios/: BLAKE2s.swift  BLE.swift  Chunk.swift  Fragment.swift  Frame.swift  MessageAdvertisement.swift  MessageAdvertisementObserver.swift  MessageEnvelope.swift  MobBleBridge.swift  MobFetchGatt.swift  MobFetchGattResponder.swift  MobFetchProtocol.swift  Noise.swift  SecureSession.swift  mob_ble_nif.m
scripts/: capture_power_baseline.sh
src/: mob_ble_nif.erl
test/: mob_ble_test.exs  test_helper.exs
test/mob/: ble_test.exs
test/mob/ble/: diagnostics_test.exs  error_test.exs  mobile_bridge_test.exs  self_test_test.exs
test/mob/ble/diagnostics/: metrics_test.exs
test/mob/ble/internal/: bridge_protocol_test.exs
(+27 files in other folders)
